--- a/go/cosmetology/index/index.wxss
+++ b/go/cosmetology/index/index.wxss
@@ -19,3 +19,30 @@
 .usermotto {
   margin-top: 200px;
 }
+
+.left{
+  width: 20%;
+  height:100%;
+  display:inline-flex;
+  flex-direction: column;
+}
+.right{
+  width: 80%;
+  display: inline-flex;
+  text-align: center;
+}
+.left a{
+  width:100%;
+  height: 40px;
+  display: block;
+}
+.right{
+  display:inline-flex;
+  flex-direction: column;
+}
+.title{
+  display: inline-block;
+}
+.bow{
+  width: 100%;
+}
