--- a/go/pages/index/index.wxss
+++ b/go/pages/index/index.wxss
@@ -3,17 +3,17 @@
 }
 .list{
  width: 100%;
- height: 100px;
+ height: 100rpx;
 }
 
 /*setTitle*/
 .setTile{
-  height:90px;
+  height:90rpx;
   width:100%;
   display:flex;
   color:#666666;
   flex-direction:row;
-  font-size:11px;
+  font-size:11rpx;
   justify-content:space-around;
   border-bottom: 1px solid #f1eeec;
 }
@@ -25,14 +25,16 @@
 }
 .tab-img{
   margin: auto;
-  width:36px;
-  height:36px;
+  width:50rpx;
+  height:50rpx;
   overflow:unset;
-  padding:15px 12px 0 12px;
+  padding:15rpx 12rpx 0 12rpx;
 }
 .tab-text{
-  padding: 10px 0;
+  padding: 10rpx 0;
 }
 .vidox{
+  margin-top: 30rpx;
   text-align: center;
+  font-size: 50rpx;
 }
