--- a/go/pages/index/index.wxml
+++ b/go/pages/index/index.wxml
@@ -1,13 +1,13 @@
 <!--index.wxml-->
 <swiper indicator-dots='true' autoplay='true' interval='5000' duration='100' >
-  <block wx:for="{{imgsrc}}" wx:key="id">
+  <block wx:for="{{jsonindex[0]}}" wx:key="id">
     <swiper-item>
       <image src="{{item.url}}"></image>
     </swiper-item>
   </block>
 </swiper>
 <view class="setTitle">
-  <block wx:for="{{arricon}}" wx:key="unique" for:key="id">
+  <block wx:for="{{jsonindex[1]}}" wx:key="unique" for:key="id">
     <navigator class="tab" url="{{item.url}}">
       <image src="{{item.icon}}" class="tab-img"></image>
       <text class="tab-text">{{item.title}}</text>
@@ -16,5 +16,5 @@
 </view>
 <view class="vidox">
   <text>教学资质</text>
-  <video src='{{vidosrc}}' class='vido'></video>
+  <video src='{{jsonindex[2]}}' class='vido'></video>
 </view>
